added vercel.json cache control and preload images

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -26,6 +26,34 @@
 			sizes="16x16"
 			href="/favicon/favicon-16x16.png"
 		/>
+		<link
+			rel="preload"
+			fetchpriority="high"
+			as="image"
+			href="%PUBLIC_URL%/images/white wood.webp"
+			type="image/webp"
+		/>
+		<!-- <link
+			rel="preload"
+			fetchpriority="high"
+			as="image"
+			href="%PUBLIC_URL%/images/black wood.webp"
+			type="image/webp"
+		/> -->
+		<link
+			rel="preload"
+			fetchpriority="high"
+			as="image"
+			href="%PUBLIC_URL%/images/light wood background.webp"
+			type="image/webp"
+		/>
+		<!-- <link
+			rel="preload"
+			fetchpriority="high"
+			as="image"
+			href="%PUBLIC_URL%/images/dark wood background.webp"
+			type="image/webp"
+		/> -->
 		<link rel="manifest" href="/favicon/site.webmanifest" />
 		<!-- <link rel="manifest" href="%PUBLIC_URL%/favicon/site.webmanifest" /> -->
 		<!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
